css/styles.css
* {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    box-sizing: border-box;
}

body {
    background-color: white;
    margin: 0%;
}

.header {
    color: black;
    text-align: center;
    padding: 1px;
    border: 3px;
    margin-left: 50px;
    margin-right: 50px;
    margin-top: 5px;
    margin-bottom: 5px;
}

.container {
    padding: 1px;
    display: flex;
}

.left-col,
.right-col,
.center-col {
    border: 0.5rem;
    border-radius: 1rem;
    border-style: solid;
    border-color: lightblue;
    background-color: lightcyan;
    text-align: center;
    height: auto;
    width: 100%;
    margin: 0.5rem;
    padding: 1rem;
}

.footer {
    position: sticky;
    left: 0;
    bottom: 0;
    width: 100%;
    background-color: lightgray;
    text-align: right;
    height: 5rem;
    padding-top: 1rem;
    padding-right: 1rem;
    padding-bottom: 1rem;
    margin-top: 100rem;
    font-weight: bold;
}

#footer-text {
    margin-right: 4rem;
}

#index-body img {
    height: auto;
    width: 80%;
}

#home-button {
    display: block;
    text-align: right;
    padding: 15px;
    margin-right: 40px;
    position: relative;
}

#home-input {
    height: 45px;
    width: 7rem;
    position: relative;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    color: white;
    background-color: rgb(86, 83, 81);
    font-size: large;
    font-weight: bold;
}

#home-input {
    transition-duration: 200ms;
}

#home-input:hover {
    display: inline;
    font-size: 21px;
}

img {
    height: auto; 
    width: 30rem;
    display: block; margin-left: auto; margin-right: auto;
}

.title-text {
    text-align: center;
    font-size: x-large;
    color: black;
}

.secondary-title-text {
    display: block;
    position: inline;
    text-align: center;
    font-size: large;
    color: black;
}

.secondary-title-text:hover { 
    font-size: 125%; 
}

.secondary-title-text {
    transition-duration: 200ms; 
}

.desc-text {
    color: black; text-align: center;
}

.ingredients-text,
.steps-text {
    color: black;
    display: block;
    background-color: lightcyan;
    border-style: solid;
    border-radius: 35px;
    border-width: 5px;
    padding: 15px;
    border-color: lightblue;
    margin: 10px;
}

.rec-page {
    margin: auto;
    border-style: solid;
    border-width: 5px;
    border-color: lightblue;
    max-width: fit-content;
}

